# Socketpp

./: .gitignore  CMakeLists.txt
include/: Socketpp.h
src/: CMakeLists.txt  CommunicatingSocket.cpp  CommunicatingSocket.h  IPv4Address.cpp  IPv4Address.h  Socket.cpp  Socket.h  SocketAddressV4.cpp  SocketAddressV4.h  SocketExceptions.cpp  SocketExceptions.h  TCPServerSocket.cpp  TCPServerSocket.h  TCPSocket.cpp  TCPSocket.h  UDPSocket.cpp  UDPSocket.h
